# fly-vpn

./: .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
flyexit/: acl_setup.py  app.py  config.py  constants.py  diagnosis.py  fly_ops.py  session.py  styles.py  tailscale.py  tailscale_api.py  usage_db.py  watchdog.py
tests/: test_launch_stop_race.py
